# ai-assistant

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  TECHNICAL_REPORT.md  conf.example.yaml  conf.yaml  conftest.py  pyproject.toml  saessagi  start.cmd  start.sh  새싹이.cmd
.claude/: settings.json
.claude/agents/: builder.md  critic.md  integrator.md  planner.md  researcher.md  validator.md
data/Template/: 회의 결과보고 템플릿.hwpx
deploy/: install.bat  install.sh  post_install.py  requirements.txt  start.bat  start.sh
docs/: ACCEPTANCE.md  ARCHITECTURE.md  CHANGE_REQUESTS.md  CHARACTER_SAESSAGI.md  E2E_SCENARIOS.md  ERROR_HISTORY.md  FRONTEND_CONSTRAINTS.md  GAP_ANALYSIS.md  MILESTONES.md  MODULES.md  RAG_업로드_캐릭터_영상.md  RISKS.md  USER_GUIDE.md  YOUTUBE_REFERENCE.md
docs/research/: bge_m3_korean.md  frontend_structure.md  gemma4_function_calling.md  gemma_function_calling_spike.md  gemma_vision_spike.md  hwpx_parser.md  hwpx_spike.md  piper_korean_tts.md
frontend/: .eslintrc.js  UPSTREAM_COMMIT.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.web.json  vitest.config.ts  vitest.setup.ts
frontend/e2e/: README.md  basic.spec.ts  citation.spec.ts  pet-mode.spec.ts  playwright.config.ts
patches/: 0001-conversations-tts-robustness.patch  README.md
prompts/: 00_kickoff.md  01_phase0_gap_analysis.md  02_phase1_architecture.md  03_phase2_module_loop.md  04_phase3_integration.md
reviews/: CR_03_init_agent_override_REVIEW.md  CR_04_extra_tool_specs_REVIEW.md  CR_05_tool_router_wiring_REVIEW.md  M_01_AppCore_CR10_REVIEW.md  M_01_AppCore_CR11_REVIEW.md  M_01_AppCore_CR11_REVIEW_R2.md  M_01_AppCore_REVIEW.md  M_02_ASREngine_REVIEW.md  M_03_VADEngine_REVIEW.md  M_04_TTSEngine_REVIEW.md  M_05_LLMAgent_REVIEW.md  M_05b_ToolRouter_REVIEW.md  M_06_DocumentIngest_REVIEW.md  M_07_VectorSearch_REVIEW.md  M_08_AvatarState_REVIEW.md  M_08_AvatarState_REVIEW_R2.md  M_08_AvatarState_REVIEW_R3.md  M_09_CalendarService_REVIEW.md  M_09_CalendarService_REVIEW_R2.md  M_10_IdleMonitor_REVIEW.md  M_10_IdleMonitor_REVIEW_R2.md  M_11_ProactiveDispatcher_MINOR_REVIEW.md  M_11_ProactiveDispatcher_REVIEW.md  M_11_ProactiveDispatcher_REVIEW_R2.md  M_11_ProactiveDispatcher_REVIEW_R3.md  M_12_Frontend_P1_REVIEW.md  M_12_Frontend_P1_REVIEW_R2.md  M_12_Frontend_P2_REVIEW.md  M_12_Frontend_P2_REVIEW_R2.md  M_12_Frontend_P3_REVIEW_R2.md  M_12_Frontend_P4_REVIEW.md  M_12_Frontend_P4_REVIEW_R2.md  M_12_Frontend_P5_DOD.md  M_12_Frontend_P5_REVIEW.md  M_12_Frontend_P5_REVIEW_R2.md  M_12_Frontend_P5_REVIEW_R3.md  M_13_MeetingMinutes_REVIEW.md
scripts/: bootstrap.cmd  bootstrap.ps1  bootstrap.py  bootstrap.sh  bundle_deps.sh  bundle_usb.sh  preflight.ps1  preflight.sh  prepare_meeting_template.py  repair_broken_doc_ids.py  spike_gemma_fc.py  spike_gemma_vision.py  spike_hwpx.py  ws_test.py
specs/: M_01_AppCore_SPEC.md  M_02_ASREngine_SPEC.md  M_03_VADEngine_SPEC.md  M_04_TTSEngine_SPEC.md  M_05_LLMAgent_SPEC.md  M_05b_ToolRouter_SPEC.md  M_06_DocumentIngest_SPEC.md  M_07_VectorSearch_SPEC.md  M_08_AvatarState_SPEC.md  M_09_CalendarService_SPEC.md  M_10_IdleMonitor_SPEC.md  M_11_ProactiveDispatcher_SPEC.md  M_12_Frontend_SPEC.md  M_13_MeetingMinutes_SPEC.md  M_14_DocumentDownload_SPEC.md  M_15_KnowledgeNotes_SPEC.md  M_16_IntentGate_SPEC.md  M_17_AgentInstructions_SPEC.md  M_18_SearchUpgrade_SPEC.md
src/agent/: __init__.py  builder.py  errors.py  events.py  gemma_chat_agent.py  health.py  no_think_llm.py  upstream_adapter.py
src/agent_prompts/: __init__.py  defaults.py  registry.py
src/app/: __init__.py  calendar_routes.py  config.py  errors.py  hardware.py  knowledge_routes.py  logging.py  main.py  meeting_minutes_routes.py  rag_routes.py  server.py  service_context.py  settings_routes.py  tts_routes.py  url_guard.py  ws_handler.py  ws_route.py
src/asr/: __init__.py  builder.py  errors.py  korean_whisper_asr.py
src/avatar_state/: __init__.py  service.py  tag_parser.py  types.py
src/calendar_service/: __init__.py  errors.py  migrations.py  service.py
src/document_ingest/: __init__.py  errors.py  formats.py  ingest.py  segments.py  subprocess_parse.py
src/idle_monitor/: __init__.py  errors.py  service.py  types.py
src/intent_gate/: __init__.py  classifier.py  prompts.py  routing.py  types.py
src/knowledge/: __init__.py  parser.py  service.py
src/meeting_minutes/: __init__.py  errors.py  generator.py  hwpx_writer.py  prompts.py  schemas.py  service.py  tool.py  types.py
src/proactive/: __init__.py  dispatcher.py  errors.py  messages.py  types.py
src/tool_router/: __init__.py  errors.py  router.py  schemas.py  screenshot.py  types.py  upstream_adapter.py
src/tts/: __init__.py  _device.py  builder.py  errors.py  melo_tts_engine.py  speaker_wav.py  upload.py  xtts_v2_engine.py
src/vad/: __init__.py
src/vector_search/: __init__.py  embedder.py  errors.py  rag.py  reranker.py  schema.py  store.py  types.py
tests/agent/: conftest.py  fakes.py  test_adapter.py  test_attached_doc_ids.py  test_builder.py  test_chat_simple.py  test_chat_tools.py  test_complete_json.py  test_extra_tool_specs.py  test_health.py  test_init.py  test_intent_gate_wiring.py  test_interrupt.py  test_memory.py  test_multimodal.py  test_no_decorator_chain.py  test_no_think_llm.py  test_note_save_fallback.py
tests/agent_prompts/: test_registry.py
tests/app/: __init__.py  conftest.py  test_config.py  test_create_app.py  test_logging.py  test_m16_wiring.py  test_prompts_routes.py  test_service_context.py  test_service_context_prompt_provider.py  test_upstream_integrity.py  test_url_guard.py  test_ws_handler.py  test_ws_route.py  upstream_baseline.json
tests/asr/: __init__.py  conftest.py  test_builder.py  test_init.py  test_transcribe.py
tests/avatar_state/: test_extract_emotion.py  test_push_event.py  test_types.py
tests/calendar_service/: conftest.py  test_performance.py  test_service.py  test_validation.py
tests/e2e/: __init__.py  (+25 more)
web/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts  vitest.config.ts
(+189 files in other folders)
