[project]
name = "ai-assistant"
version = "0.0.1"
description = "Offline multimodal AI assistant for corporate intranet"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
