[project]
name = "ai-assistant"
version = "0.0.1"
description = "Offline multimodal AI assistant for corporate intranet"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.117",
    # fastapi 0.116은 starlette<0.49를 요구한다. sse-starlette 3.x가 starlette>=0.49.1을 강제해
    # 전이 해결이 starlette 1.0.0을 끌어오면 APIRouter가 on_startup 인자로 깨진다(tests/app 8건 회귀).
    # 핀으로 고정: starlette<0.49, sse-starlette<3 (sse-starlette 2.x는 starlette<0.49 수용).
    "starlette>=0.40,<0.49",
    "sse-starlette>=2.0,<3",
    "uvicorn[standard]>=0.30,<0.35",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "loguru>=0.7,<0.8",
    "python-dotenv>=1.0,<2",
    "faster-whisper>=1.0,<2",
    "ctranslate2>=4.4,<5",
    "silero-vad>=5.0,<6",
    # M_04 TTSEngine
    # PENDING: MeloTTS PyPI 패키지명 확정 필요 — myshell-ai/MeloTTS는 PyPI에 공식 게시되지 않음.
    # 오프라인 번들 확정 시 git+URL 또는 wheel 경로로 대체할 것.
    # "melo>=0.1",           # PENDING: 패키지명 확정 필요 (PyPI 미등록, git install 권장)
    "TTS>=0.22.0,<1",      # Coqui XTTS v2 — CPML 라이선스 주의
    "torch>=2.0.0",         # MeloTTS + XTTS v2 딥러닝 런타임
    "soundfile>=0.12,<1",   # WAV I/O 보조 (libsndfile 기반)
    "python-multipart>=0.0.9",  # FastAPI UploadFile multipart 지원
    "httpx>=0.27,<1",           # M_05 probe_ollama + upstream AsyncLLM 의존
    "openai>=1.30,<2",          # upstream AsyncLLM 의존
    # M_05b ToolRouter
    "jsonschema>=4.21,<5",
    "mss>=9.0,<10",
    "Pillow>=10.2,<12",
    # M_07 VectorSearch: BGE-M3 임베딩, LanceDB 벡터 저장소, PyArrow 스키마, NumPy 배열
    "sentence-transformers>=3.0,<5",
    "lancedb>=0.10,<1",
    "pyarrow>=15.0,<19",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "psutil>=5.9",
    "respx>=0.21,<1",   # M_05 httpx mock (probe_ollama 테스트용)
    "httpx>=0.27,<1",   # probe_ollama 런타임 의존
    "openai>=1.30,<2",  # upstream AsyncLLM 의존
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# upstream 모듈은 타입 힌트 불완전 — 무시
[[tool.mypy.overrides]]
module = "open_llm_vtuber.*"
ignore_errors = true
[[tool.mypy.overrides]]
module = "prompts.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "chardet.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "ctranslate2.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "faster_whisper.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "silero_vad.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "melo.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "TTS.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "mss.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "lancedb.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src", "upstream/Open-LLM-VTuber/src", "upstream/Open-LLM-VTuber"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
