[project]
name = "ai-assistant"
version = "0.0.1"
description = "Offline multimodal AI assistant for corporate intranet"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.117",
    # fastapi 0.116은 starlette<0.49를 요구한다. sse-starlette 3.x가 starlette>=0.49.1을 강제해
    # 전이 해결이 starlette 1.0.0을 끌어오면 APIRouter가 on_startup 인자로 깨진다(tests/app 8건 회귀).
    # 핀으로 고정: starlette<0.49, sse-starlette<3 (sse-starlette 2.x는 starlette<0.49 수용).
    "starlette>=0.40,<0.49",
    "sse-starlette>=2.0,<3",
    "uvicorn[standard]>=0.30,<0.35",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "loguru>=0.7,<0.8",
    "python-dotenv>=1.0,<2",
    "faster-whisper>=1.0,<2",
    "ctranslate2>=4.4,<5",
    "silero-vad>=5.0,<6",
    # M_04 TTSEngine
    # PENDING: MeloTTS PyPI 패키지명 확정 필요 — myshell-ai/MeloTTS는 PyPI에 공식 게시되지 않음.
    # 오프라인 번들 확정 시 git+URL 또는 wheel 경로로 대체할 것.
    # "melo>=0.1",           # PENDING: 패키지명 확정 필요 (PyPI 미등록, git install 권장)
    "TTS>=0.22.0,<1; python_version < '3.12' and sys_platform == 'win32'",  # Coqui XTTS v2 — CPML 라이선스·Python<3.12·Windows 전용 (CR-02 법무 승인 대기)
    "torch>=2.0.0",         # MeloTTS + XTTS v2 딥러닝 런타임
    "soundfile>=0.12,<1",   # WAV I/O 보조 (libsndfile 기반)
    "python-multipart>=0.0.9",  # FastAPI UploadFile multipart 지원
    "httpx>=0.27,<1",           # M_05 probe_ollama + upstream AsyncLLM 의존
    "openai>=1.30,<2",          # upstream AsyncLLM 의존
    # M_05b ToolRouter
    "jsonschema>=4.21,<5",
    "mss>=9.0,<10",
    "Pillow>=10.2,<12",
    # M_07 VectorSearch: BGE-M3 임베딩, LanceDB 벡터 저장소, PyArrow 스키마, NumPy 배열
    "sentence-transformers>=3.0,<5",
    "lancedb>=0.10,<1",
    "pyarrow>=15.0,<19",
    "numpy>=1.26,<3",
    # M_06 DocumentIngest: PDF/DOCX/PPTX/HWPX/TXT/MD 파서 + 청킹 + XXE 방어
    "pypdfium2>=4.30,<5",         # PDF 파싱 (Apache-2.0, PDFium 기반)
    "python-docx>=1.1,<2",        # DOCX 파싱 (MIT)
    "python-pptx>=1.0,<2",        # PPTX 파싱 (MIT)
    "markdown-it-py>=3.0,<4",     # MD 파싱 (MIT)
    "defusedxml>=0.7,<1",         # XXE 방어 (Python-2.0)
    # M_10 IdleMonitor: 전역 키보드·마우스 훅 + Windows GetLastInputInfo 폴백
    "pynput>=1.7,<2",
    "pywin32>=306; sys_platform == 'win32'",
    # M_11 ProactiveDispatcher: APScheduler AsyncIOScheduler, CronTrigger, IntervalTrigger
    "APScheduler>=3.10,<4",
    "chardet>=7.4.3",
    "mcp>=1.27.0",
    "anthropic>=0.96.0",
    "pysbd>=0.3.4",
    "langdetect>=1.0.9",
    "ruamel-yaml>=0.19.1",
    "tqdm>=4.67.3",
    "pydub>=0.25.1",
    "scipy>=1.17.1",
    "letta-client>=1.10.3",
    "aiohttp>=3.13.5",
    "librosa>=0.11.0",
    "unidic-lite>=1.0.8",
    "cn2an>=0.5.24",
    "jieba>=0.42.1",
    "pypinyin>=0.55.0",
    "mecab-python3>=1.0.12",
    "num2words>=0.5",
    "pykakasi",
    "fugashi",
    "g2p-en",
    "anyascii",
    "jamo",
    "g2pkk",
    "gruut",
    "eng-to-ipa",
    "unidecode",
    "langid",
    "tensorboard",
    "txtsplit",
    "cached-path",
    "python-mecab-ko",
    "psutil>=7.2.2",
    "lxml>=5.0,<6",
    "respx>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",   # @pytest.mark.timeout(N) — E2E 시나리오별 시간 상한
    "ruff>=0.4",
    "mypy>=1.10",
    "psutil>=5.9",
    "respx>=0.21,<1",   # M_05 httpx mock (probe_ollama 테스트용)
    "httpx>=0.27,<1",   # probe_ollama 런타임 의존
    "openai>=1.30,<2",  # upstream AsyncLLM 의존
    "freezegun>=1.4,<2",    # E2E frozen_clock 픽스처
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# upstream 모듈은 타입 힌트 불완전 — 무시
[[tool.mypy.overrides]]
module = "open_llm_vtuber.*"
ignore_errors = true
[[tool.mypy.overrides]]
module = "prompts.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "chardet.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "ctranslate2.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "faster_whisper.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "silero_vad.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "melo.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "TTS.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "mss.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "lancedb.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pynput.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "win32api.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "win32con.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pypdfium2.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pptx.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "markdown_it.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "defusedxml.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src", "upstream/Open-LLM-VTuber/src", "upstream/Open-LLM-VTuber"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: 전체 E2E 스위트 (e2e_fast + e2e_model 합집합)",
    "e2e_fast: 모델 없이 돌 수 있는 빠른 E2E (CI 대상)",
    "e2e_model: 실제 Gemma/Whisper/MeloTTS/BGE-M3 필요 (로컬/스테이지 전용)",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.11",
]
